--- a/authServer/html/index.html
+++ b/authServer/html/index.html
@@ -1,57 +1,11 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Music Player</title>
-    <script>
-        function songSwitcher(song) {
-            if (song == 'all_my_love') {
-                document.getElementById('audioController').src = "Music/all_my_love.mp3";
-            } else if (song == 'blinding_lights') {
-                document.getElementById('audioController').src = "Music/blinding_lights.mp3";
-            } else if (song == 'in_your_eyes') {
-                document.getElementById('audioController').src = "Music/in_your_eyes.mp3";
-            } else {
-                alert("Not a real song?")
-            }
-        }
-
-    </script>
-
-</head>
-
-<body>
-    <style>
-        .btn {
-            width: 220px;
-            padding: 5px;
-        }
-    </style>
-
-    <h2>Streaming Service</h2>
-
-
-    <br>
-
-
-    <audio id="audioController" controls preload="auto"></audio>
-    <br>
-    <br>
-    <button type="button" onclick="songSwitcher('all_my_love') ; nameChanger()" class="btn btn-primary">All My
-        Love</button>
-    <br>
-    <br>
-    <button type="button" onclick="songSwitcher('blinding_lights')" class="btn btn-primary">Blinding Lights</button>
-    <br>
-    <br>
-    <button type="button" onclick="songSwitcher('in_your_eyes')" class="btn btn-primary">Robin Schulz - In Your
-        Eyes</button>
-    <br>
-    <br>
-
-</body>
-
+    <body>
+        <h1>u are home thats amazin</h1>
+        <p>
+            This site is for test purposes, so you can login and get a jwt token, and then test that
+            you can only acces a specific site if you have a valid jwt.
+        </p>
+        <a href="/login">login</a>
+        <a href="/music">music</a>
+    </body>
 </html>
