--- a/gmailserver/html/resetPassword.html
+++ b/gmailserver/html/resetPassword.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <script>
+    <!-- <script>
         window.onload = () => {
             var btn = document.getElementById('send');
             var pass = document.getElementById('password');
@@ -33,12 +33,13 @@
                     .catch((error) => console.log(error));
             });
         };
-    </script>
+    </script> -->
     <body>
         <h3>Reset password</h3>
-        <form>
-            new password: <input type="text" id="password" /> <br />
-            confirm password: <input type="text" id="confirmPassword" /> <br />
+        <form action="http://localhost:80/resetPassword_form" method="POST">
+            new_password: <input type="text" id="password" name="password" /> <br />
+            confirm_password: <input type="text" id="confirmPassword" name="confirmPassword" />
+            <br />
             <input type="submit" id="send" value="Submit" />
         </form>
     </body>
