--- a/gmailserver/html/resetPassword.html
+++ b/gmailserver/html/resetPassword.html
@@ -1,46 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <!-- <script>
-        window.onload = () => {
-            var btn = document.getElementById('send');
-            var pass = document.getElementById('password');
-            var confPass = document.getElementById('confirmPassword');
-            btn.addEventListener('click', function () {
-                let url = document.URL;
-                console.log(url);
-                splitedUrl = url.split('?');
-                encodedData = splitedUrl[1];
-                const sendUrl = 'http://localhost:80/resetPassword_form?';
-                const data = {
-                    password: pass.value,
-                    confirmPassword: confPass.value,
-                    encrypted: encodedData
-                };
-                const specs = {
-                    headers: {
-                        'content-type': 'application/json'
-                    },
-                    body: data,
-                    method: 'POST'
-                };
-                fetch(sendUrl, specs)
-                    .then((data) => {
-                        return data.json();
-                    })
-                    .then((res) => {
-                        console.log(res);
-                    })
-                    .catch((error) => console.log(error));
-            });
-        };
-    </script> -->
     <body>
         <h3>Reset password</h3>
-        <form action="http://localhost:8081/resetPassword_form" method="POST">
+        <form>
             new_password: <input type="text" id="password" name="password" /> <br />
             confirm_password: <input type="text" id="confirmPassword" name="confirmPassword" />
             <br />
             <input type="submit" id="send" value="Submit" />
         </form>
     </body>
+    <script src="resetPassFront.js"></script>
 </html>
