Failsaving withgmail server

--- a/gmailserver/html/resetPassword.html
+++ b/gmailserver/html/resetPassword.html
@@ -2,12 +2,11 @@
 <html>
     <body>
         <h3>Reset password</h3>
-        <form>
-            new_password: <input type="text" id="password" name="password" /> <br />
-            confirm_password: <input type="text" id="confirmPassword" name="confirmPassword" />
-            <br />
-            <input type="submit" id="send" value="Submit" />
-        </form>
+
+        new_password: <input type="text" id="password" name="password" /> <br />
+        confirm_password: <input type="text" id="confirmPassword" name="confirmPassword" />
+        <br />
+        <button type="submit" id="send">submit</button>
     </body>
     <script src="resetPassFront.js"></script>
 </html>
