Feat: response message in div in frontend javascript

--- a/gmailserver/html/resetPassword.html
+++ b/gmailserver/html/resetPassword.html
@@ -3,10 +3,11 @@
     <body>
         <h3>Reset password</h3>
 
-        new_password: <input type="text" id="password" name="password" /> <br />
-        confirm_password: <input type="text" id="confirmPassword" name="confirmPassword" />
+        new_password: <input type="password" id="password" name="password" /> <br />
+        confirm_password: <input type="password" id="confirmPassword" name="confirmPassword" />
         <br />
         <button type="submit" id="send">submit</button>
+        <div id="response"></div>
     </body>
     <script src="resetPassFront.js"></script>
 </html>
