--- a/authServer/html/index.html
+++ b/authServer/html/index.html
@@ -6,7 +6,7 @@
             This site is for test purposes, so you can login and get a jwt token, and then test that
             you can only acces a specific site if you have a valid jwt.
         </p>
-        <a href="/login">login</a>
-        <a href="/music">music</a>
+        <a href="http://kubuntu.stream.stud-srv.sdu.dk/service01/login">login</a>
+        <a href="http://kubuntu.stream.stud-srv.sdu.dk/service01/music">music</a>
     </body>
 </html>
