frontend files and dockerfile

--- a/frontend/html/login/login-page.html
+++ b/frontend/html/login/login-page.html
@@ -9,6 +9,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit">Submit</button> <br />
+        <a href="/forgotPass">Forgot Password?</a>
     </form>
 </body>
