--- a/reverse_proxy/html/login/login-page.html
+++ b/reverse_proxy/html/login/login-page.html
@@ -10,6 +10,6 @@
             <input type="password" id="password" name="password" required />
         </div>
         <button type="submit">Submit</button> <br />
-        <a href="/forgotPass">Forgot Password?</a>
+        <a href="../forgot/forgotPasword-page.html">Forgot Password?</a>
     </form>
 </body>
