--- a/reverse_proxy/html/login/login-page.html
+++ b/reverse_proxy/html/login/login-page.html
@@ -2,14 +2,37 @@
 <body>
     <form action="/auth/login" method="POST">
         <div>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required />
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email" required />
         </div>
         <div>
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Submit</button> <br />
+        <button type="submit">Submit</button> <br/>
+
+        <button id="refreshBtn" type="button">REFRESH JTWs's</button>
+        <p>check status in console</p>
+        <br/>
+        <button id="logoutBtn" type="button">LOGOUT</button>
         <a href="../forgot/forgotPasword-page.html">Forgot Password?</a>
     </form>
+    <script >
+        const logoutBtn = document.getElementById('logoutBtn');
+        logoutBtn.addEventListener('click', ()=> {
+            fetch('https://localhost/auth/logout', {
+                method: 'POST'
+            });
+        });
+
+        
+
+        const refreshBtn = document.getElementById('refreshBtn');
+        refreshBtn.addEventListener('click', ()=> {
+            fetch('https://localhost/auth/refresh', {
+                method: 'POST'
+            });
+        });
+    </script>
 </body>
+
