--- a/frontend/html/login/login-page.html
+++ b/frontend/html/login/login-page.html
@@ -9,30 +9,31 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Submit</button> <br/>
+        <button type="submit">Submit</button> <br />
 
         <button id="refreshBtn" type="button">REFRESH JTWs's</button>
         <p>check status in console</p>
-        <br/>
+        <br />
         <button id="logoutBtn" type="button">LOGOUT</button>
         <a href="../forgot/forgotPasword-page.html">Forgot Password?</a>
     </form>
-    <script >
+    <script>
         const logoutBtn = document.getElementById('logoutBtn');
-        logoutBtn.addEventListener('click', ()=> {
-            fetch('https://localhost/auth/logout', {
+        logoutBtn.addEventListener('click', () => {
+            //MOCK_URL='https://localhost/auth/logout'
+            //KUBUNTU_URL="http://kubuntu-stream.stud-srv.sdu.dk/service01/logout"
+            fetch('http://kubuntu-stream.stud-srv.sdu.dk/service01/logout', {
                 method: 'POST'
             });
         });
 
-        
-
         const refreshBtn = document.getElementById('refreshBtn');
-        refreshBtn.addEventListener('click', ()=> {
+        refreshBtn.addEventListener('click', () => {
+            //MOCK_URL='https://localhost/auth/refresh'
+            //KUBUNTU_URL="http://kubuntu-stream.stud-srv.sdu.dk/service01/refresh"
             fetch('https://localhost/auth/refresh', {
                 method: 'POST'
             });
         });
     </script>
 </body>
-
