--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -6,7 +6,7 @@
             This site is for test purposes, so you can login and get a jwt token, and then test that
             you can only acces a specific site if you have a valid jwt.
         </p>
-        <a href="service03/login">login</a>
-        <a href="service03/music">music</a>
+        <a href="/login">login</a>
+        <a href="/music">music</a>
     </body>
 </html>
