--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,7 +4,7 @@
         <h1>u are home thats amazin</h1>
         <p>
             This site is for test purposes, so you can login and get a jwt token, and then test that
-            you can only acces a specific site if you have a valid jwt.
+            you can only acces a specific site if you have a valid jwt. :D
         </p>
         <a href="/login">login</a>
         <a href="/music">music</a>
