fix: submit to json

--- a/frontend/html/login/login-page.html
+++ b/frontend/html/login/login-page.html
@@ -9,7 +9,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Submit</button> <br />
+        <button id="submit" type="submit">Submit</button> <br />
 
         <button id="refreshBtn" type="button">REFRESH JTWs's</button>
         <p>check status in console</p>
