--- a/frontend/html/login/login-page.html
+++ b/frontend/html/login/login-page.html
@@ -39,7 +39,11 @@
         const loginBtn = document.getElementById('submit');
         loginBtn.addEventListener('click', () => {
             fetch('http://kubuntu.stream.stud-srv.sdu.dk/service01/login', {
-                method: 'POST'
+                method: 'POST',
+                body: JSON.stringify({
+                    email: document.getElementById('email').value,
+                    password: document.getElementById('password').value
+                })
             });
         });
     </script>
