CustomUpload size + json update
Sizelistener for uploaded files added.
Element values added to JSON

--- a/gui/customDownload.html
+++ b/gui/customDownload.html
@@ -17,7 +17,7 @@
                 <input type="number" name="track_nr" placeholder="Track Number">
                 <input type="number" name="total_track_count" placeholder="Total Track Count">
                 <input type="file" name="art" id="art" accept="image/jpeg, image/png">
-                <input type="file" name="audio" id="audio">
+                <input type="file" name="audio" id="audio" accept="audio/*">
 
                 <button type="submit" onclick="return cuSubmit()">Submit</button>
             
