--- a/MediaAcquisition/gui/customDownload.html
+++ b/MediaAcquisition/gui/customDownload.html
@@ -11,16 +11,20 @@
         <div id="customAudioForm">
             
                 <input type="text" name="name" id="name" placeholder="Song Name">
-                <input type="text" name="artist" placeholder="Artist Name">
-                <input type="number" name="year" placeholder="Release Year">
-                <input type="text" name="collection" placeholder="Collection">
-                <input type="number" name="track_nr" placeholder="Track Number">
-                <input type="number" name="total_track_count" placeholder="Total Track Count">
+                <input type="text" name="artist" id="artist" placeholder="Artist Name">
+                <input type="number" name="release_year" id="release_year" placeholder="Release Year">
+                <input type="checkbox" name="is_collection" id="is_collection">
+                <input type="text" name="collection_name" id="collection_name" placeholder="Collection">
+                <input type="number" name="track_nr" id="track_nr" placeholder="Track Number">
+                <input type="number" name="total_track_count" id="total_track_count" placeholder="Total Track Count">
+                <br>
+                <label for="art">Upload artwork</label>
                 <input type="file" name="art" id="art" accept="image/jpeg, image/png">
+                <br>
+                <label for="audio">Upload mp3 audio</label>
                 <input type="file" name="audio" id="audio" accept="audio/*">
-
+                <br>
                 <button type="submit" onclick="return cuSubmit()">Submit</button>
-            
         </div>
 
     </body>
