Gui work in progress

--- a/gui/customUpload.html
+++ b/gui/customUpload.html
@@ -2,12 +2,10 @@
 
     <head>
         <link rel="stylesheet" href="css/style.css">
-        <script src="customUpload.js"></script>
+        <script src="customUpload.html"></script>
     </head>
 
-
     <body>
-
         <div id="customAudioForm">
             
                 <input type="text" name="name" id="name" placeholder="Song Name">
