minor change to custom audio gui

--- a/gui/customUpload.html
+++ b/gui/customUpload.html
@@ -6,7 +6,9 @@
     </head>
 
     <body>
+
         <div id="customAudioForm">
+            <h1>Add song to system</h1>
                 <div>
                     <input type="text" name="name" id="name" placeholder="Song Name">
                 </div>
