--- a/gui/youtubeUpload.html
+++ b/gui/youtubeUpload.html
@@ -4,6 +4,25 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="youtubeUpload.js"></script>
+
+        <style>
+            .loader {
+                border: 16px solid #f3f3f3; /* Light grey */
+                border-top: 16px solid #3498db; /* Blue */
+                border-radius: 50%;
+                width: 120px;
+                height: 120px;
+                animation: spin 2s linear infinite;
+                display: none;
+                
+            }
+
+            @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+            }
+
+        </style>
     </head>
 
     <body>
@@ -11,6 +30,9 @@
                 <label for="ytlink">Youtube ID</label>
                 <input type="text" id="ytlink">
                 <button type="submit" id="addyoutubebtn">Add</button>
+        </div>
+        <div>
+            <div class="loader" id="loader"></div>
         </div>
     </body>
 
